--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "http-status-codes": "^1.4.0"
+    "http-status-codes": "^1.4.0",
+    "jsonschema": "^1.2.6"
   }
 }
