--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "http-status-codes": "^1.4.0",
-    "jsonschema": "^1.2.6"
+    "jsonschema": "^1.2.6",
+    "swagger-ui-express": "^4.1.4"
   }
 }
